[package]
name = "pfcalc"
version = "0.1.0"
authors = ["Stuart Haidon <serayen.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "5.0.4"
tabwriter = "1.1.0"
strum = "0.16.0"
strum_macros = "0.16.0"
joinery = "2.0.0"
