[package]
name = "pfcalc"
version = "0.1.0"
authors = ["Stuart Haidon <serayen.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = { version = "9.0.0", default-features = false }
tabwriter = "1.2.1"
joinery = "2.1.0"
derive_more = "0.99.16"
lasso = "0.6.0"
dirs = "4.0.0"
